--- a/.github/workflows/azure-pipeline.yml
+++ b/.github/workflows/azure-pipeline.yml
@@ -1,24 +1,40 @@
-name: Run Azure CLI Login with OpenID Connect
-on: [push]
-     
-jobs: 
-  test:
-    permissions:
-      id-token: write # Require write permission to Fetch an OIDC token.
+name: Run Terraform Plan and Apply with Azure CLI Login (OIDC)
 
+on: [push]
+
+permissions:
+  id-token: write      # For OIDC auth
+  contents: read
+
+jobs:
+  terraform:
     runs-on: ubuntu-latest
+    environment: production
+
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
     - name: Azure CLI Login
       uses: azure/login@v2
       with:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-    
-    - name: Azure CLI script
-      uses: azure/cli@v2
+
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v3
       with:
-        azcliversion: latest
-        inlineScript: |
-          az account show
-          # You can write your Azure CLI inline scripts here.
+        terraform_version: 1.6.6
+
+    - name: Terraform Init
+      run: terraform init
+      working-directory: infra
+
+    - name: Terraform Plan
+      run: terraform plan -out=tfplan
+      working-directory: infra
+
+    - name: Terraform Apply
+      run: terraform apply -auto-approve tfplan
+      working-directory: infra
