--- a/.github/workflows/azure-pipeline.yml
+++ b/.github/workflows/azure-pipeline.yml
@@ -35,6 +35,6 @@ jobs:
       run: terraform plan -out=tfplan
       working-directory: infra
 
-    - name: Terraform Apply
-      run: terraform apply -auto-approve tfplan
-      working-directory: infra
+#t    - name: Terraform Apply
+#      run: terraform apply -auto-approve tfplan
+#      working-directory: infra
