--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -21,12 +21,14 @@ jobs:
           node-version: '18'
       - name: Install dependencies
         run: npm install
+        working-directory: frontend
       - name: Build
         run: npm run build
+        working-directory: frontend
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           action: 'upload'
-          app_location: "/" # Adjust if your app is in a subfolder
-          output_location: "build" # Adjust if your build output is different
+          app_location: "frontend"
+          output_location: "build"
