--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -6,24 +6,17 @@ on:
       - main
 
 jobs:
-  build_and_deploy:
+  build_and_deploy_job:
     runs-on: ubuntu-latest
-    name: Build and Deploy Static Web App
+    name: Build and Deploy Job
     steps:
-      - uses: actions/checkout@v4
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-      - name: Install dependencies
-        run: npm install
-        working-directory: frontend
-      - name: Build
-        run: npm run build
-        working-directory: frontend
-      - name: Deploy to Azure Static Web Apps
+      - uses: actions/checkout@v3
+
+      - name: Build And Deploy
+        id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
-          action: 'upload'
-          app_location: "frontend"
+          action: "upload"
+          app_location: "frontend/public"      # <-- this is where your index.html lives!
+          output_location: ""                  # <-- no build output, just serve static files
