--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,6 @@
   },
   "dependencies": {
     "@azure/cosmos": "^4.2.0",
-    "@azure/storage-blob": "^12.23.0",
-    "uuid": "^9.0.1"
+    "@azure/storage-blob": "^12.23.0"
   }
 }
