--- a/frontend/public/staticwebapp.config.json
+++ b/frontend/public/staticwebapp.config.json
@@ -3,7 +3,7 @@
     {
       "route": "/api/*",
       "allowedRoles": ["anonymous"],
-      "backend": "default"
+      "backend": "baro-audio-api"
     }
   ],
   "navigationFallback": {
